--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -54,9 +54,17 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       # Install project dependencies and build
-      - name: Install dependencies
+      - name: Install backend dependencies
+        working-directory: ./backend
         run: npm install
-      - name: Run build
+      - name: Run backend build
+        working-directory: ./backend
+        run: npm run build
+      - name: Install frontend dependencies
+        working-directory: ./frontend
+        run: npm install
+      - name: Run frontend build
+        working-directory: ./frontend
         run: npm run build
 
       # Install AWS CLI 2
